[gd_scene load_steps=6 format=3 uid="uid://bepgm4y6qrnwk"]

[ext_resource type="Script" uid="uid://2hyepfeeb4ns" path="res://utils/google_play_services.gd" id="1_6u0yw"]
[ext_resource type="Script" uid="uid://dj7yu47ndrrof" path="res://addons/GodotPlayGameServices/scripts/sign_in/sign_in_client.gd" id="2_6mvwj"]
[ext_resource type="Script" uid="uid://t18se4plkfm0" path="res://addons/GodotPlayGameServices/scripts/achievements/achievements_client.gd" id="3_wpymy"]
[ext_resource type="Script" uid="uid://b3wyb1emryjfb" path="res://addons/GodotPlayGameServices/scripts/leaderboards/leaderboards_client.gd" id="4_vq218"]
[ext_resource type="Script" uid="uid://bgaybuysq7qk2" path="res://addons/GodotPlayGameServices/scripts/snapshots/snapshots_client.gd" id="5_h80ng"]

[node name="GooglePlayServices" type="Node"]
script = ExtResource("1_6u0yw")

[node name="PlayGamesSignInClient" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_6mvwj")
metadata/_custom_type_script = "uid://dj7yu47ndrrof"

[node name="PlayGamesAchievementsClient" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_wpymy")
metadata/_custom_type_script = "uid://t18se4plkfm0"

[node name="PlayGamesLeaderboardsClient" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("4_vq218")
metadata/_custom_type_script = "uid://b3wyb1emryjfb"

[node name="PlayGamesSnapshotsClient" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_h80ng")
metadata/_custom_type_script = "uid://bgaybuysq7qk2"

[connection signal="user_authenticated" from="PlayGamesSignInClient" to="." method="_on_user_authenticated"]
[connection signal="conflict_emitted" from="PlayGamesSnapshotsClient" to="." method="_conflict_emitted"]
[connection signal="game_loaded" from="PlayGamesSnapshotsClient" to="." method="_game_loaded"]
[connection signal="snapshots_loaded" from="PlayGamesSnapshotsClient" to="." method="_snapshots_loaded"]
